Fixed issue with text running off screen

--- a/css/clanok.css
+++ b/css/clanok.css
@@ -35,7 +35,7 @@ a:hover, a:focus{
 p{
 	margin: 0 0 24px;
 	text-align: justify;
-	width: 100%;
+	width: auto;
 }
 .navigation-bar{
 	background: #222222;
